fix(side menu): added position relative to the wrapping element in the side-menu-item (#263)

--- a/core/src/components/side-menu/side-menu-item/side-menu-item.scss
+++ b/core/src/components/side-menu/side-menu-item/side-menu-item.scss
@@ -55,6 +55,7 @@
         display: flex;
         justify-content: center;
         align-items: center;
+        position: relative;
       }
     }
 
